<resources>
    <string name="app_name">WhiteNoisePlayer</string>
    <string name="recommend">推荐</string>
    <string name="navigation_main">主页</string>
    <string name="navigation_personal">个人</string>

    <string name="playing_text">正在播放</string>
    <string name="search_hint">搜索白噪音</string>
    <string name="collect_text">当前收藏</string>
    <string name="collect_icon_content">heart</string>
    <string name="local_text">本地歌曲</string>
    <string name="often_listening_text">我的常听</string>
    <string name="item_image_content">itemImage</string>
    <string name="photof_f">photof_f</string>
    <string name="photof_s">photof_s</string>
    <string name="pause">pause</string>
    <string name="personal_local_text">本地</string>
    <string name="personal_collect_text">收藏</string>
    <string name="personal_listen_text">听过</string>
    <string name="personal_listen_recorder_text">听歌纪录</string>
    <string name="day_recommend">今日推荐</string>

    <string name="music_dir">http://192.168.0.103/music/</string>
    <string name="picture_dir">http://192.168.0.103/picture/</string>
</resources>
