<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/search_background"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="5dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/collectWrapper"
            android:layout_width="0dp"
            android:layout_height="@dimen/collect_local_block_height"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/collect_background"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/localWrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchEditText">

            <ImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="@dimen/favorite_icon_size"
                android:layout_height="@dimen/favorite_icon_size"
                android:contentDescription="@string/collect_icon_content"
                android:src="@drawable/heart_icon"
                app:layout_constraintBottom_toTopOf="@+id/collectText"
                app:layout_constraintStart_toStartOf="@+id/collectText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/collectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collect_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favoriteIcon" />

            <TextView
                android:id="@+id/collectNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="26"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/localWrapper"
            android:layout_width="0dp"
            android:layout_height="@dimen/collect_local_block_height"
            android:background="@drawable/local_background"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/collectWrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/collectWrapper"
            app:layout_constraintTop_toTopOf="@id/collectWrapper">

            <ImageView
                android:id="@+id/localIcon"
                android:layout_width="@dimen/favorite_icon_size"
                android:layout_height="@dimen/favorite_icon_size"
                android:contentDescription="@string/collect_icon_content"
                android:src="@drawable/star_icon"
                app:layout_constraintBottom_toTopOf="@+id/localText"
                app:layout_constraintStart_toStartOf="@+id/localText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/localText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_text"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localIcon" />

            <TextView
                android:id="@+id/localNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="26"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/listeningOftenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/often_listening_text"
            android:textColor="@color/textTitle"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collectWrapper"/>

</androidx.constraintlayout.widget.ConstraintLayout>